--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="pages/cases.html">Case Search</a></li>
-                    <li><a href="pages/courts.html">Courts</a></li>
-                    <li><a href="pages/services.html">Services</a></li>
-                    <li><a href="pages/contact.html">Contact</a></li>
+                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                    <li><a href="cases.html" class="nav-link">Cases</a></li>
+                    <li><a href="courts.html">Courts</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
